--- a/Client/Desktop/EVSE/mainwindow.ui
+++ b/Client/Desktop/EVSE/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>656</height>
+    <width>580</width>
+    <height>468</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,8 +72,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>700</width>
-     <height>20</height>
+     <width>580</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
@@ -104,6 +104,11 @@
     </property>
     <addaction name="actionStatus_Codes"/>
     <addaction name="actionNetzwerk"/>
+    <addaction name="actionBefehle_zeigen"/>
+    <addaction name="separator"/>
+    <addaction name="actionStatus_Codes_verbergen"/>
+    <addaction name="actionNetzwerk_verbergen"/>
+    <addaction name="actionBefehle_verbergen"/>
    </widget>
    <addaction name="menuDatei"/>
    <addaction name="menuFenster"/>
@@ -116,7 +121,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="allowedAreas">
-    <set>Qt::BottomDockWidgetArea|Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::AllDockWidgetAreas</set>
    </property>
    <property name="windowTitle">
     <string>Status-Codes der Tankstelle</string>
@@ -307,7 +312,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="allowedAreas">
-    <set>Qt::BottomDockWidgetArea|Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::AllDockWidgetAreas</set>
    </property>
    <property name="windowTitle">
     <string>Netzwerk</string>
@@ -332,6 +337,170 @@
        <property name="lineWrapMode">
         <enum>QTextEdit::WidgetWidth</enum>
        </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="commandDock">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
+   <property name="windowTitle">
+    <string>Befehl</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="1" column="0">
+      <widget class="QGroupBox" name="groupBox_2">
+       <property name="title">
+        <string>Ladung starten</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_6">
+        <item row="0" column="0">
+         <widget class="QSpinBox" name="startSpinBox">
+          <property name="suffix">
+           <string>A</string>
+          </property>
+          <property name="prefix">
+           <string>Stromstärke:</string>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>20</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="startButton">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Start</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
+        <string>Wiederholungsintervall</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_5">
+        <item row="0" column="0">
+         <widget class="QSpinBox" name="intevalSpinBox">
+          <property name="suffix">
+           <string>ms</string>
+          </property>
+          <property name="prefix">
+           <string>Intervall: </string>
+          </property>
+          <property name="minimum">
+           <number>50</number>
+          </property>
+          <property name="maximum">
+           <number>19999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="intervalButton">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Setzen</string>
+          </property>
+          <property name="checkable">
+           <bool>false</bool>
+          </property>
+          <property name="autoDefault">
+           <bool>false</bool>
+          </property>
+          <property name="default">
+           <bool>false</bool>
+          </property>
+          <property name="flat">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QGroupBox" name="groupBox_3">
+       <property name="title">
+        <string>Ladung beenden</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_7">
+        <item row="0" column="1">
+         <widget class="QPushButton" name="stopButton">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Stop</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
@@ -369,13 +538,16 @@
   </action>
   <action name="actionStatus_Codes">
    <property name="checkable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Status-Codes</string>
+    <string>Status-Codes anzeigen</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -383,16 +555,36 @@
   </action>
   <action name="actionNetzwerk">
    <property name="checkable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
-    <string>Netzwerk</string>
+    <string>Netzwerk anzeigen</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionBefehle_zeigen">
+   <property name="text">
+    <string>Befehle anzeigen</string>
+   </property>
+  </action>
+  <action name="actionStatus_Codes_verbergen">
+   <property name="text">
+    <string>Status-Codes verbergen</string>
+   </property>
+  </action>
+  <action name="actionNetzwerk_verbergen">
+   <property name="text">
+    <string>Netzwerk verbergen</string>
+   </property>
+  </action>
+  <action name="actionBefehle_verbergen">
+   <property name="text">
+    <string>Befehle verbergen</string>
    </property>
   </action>
  </widget>
@@ -481,49 +673,97 @@
   </connection>
   <connection>
    <sender>actionStatus_Codes</sender>
-   <signal>toggled(bool)</signal>
+   <signal>triggered()</signal>
    <receiver>stateDock</receiver>
-   <slot>setVisible(bool)</slot>
+   <slot>show()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
      <y>-1</y>
     </hint>
     <hint type="destinationlabel">
-     <x>349</x>
-     <y>516</y>
+     <x>149</x>
+     <y>367</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>actionNetzwerk</sender>
-   <signal>toggled(bool)</signal>
+   <signal>triggered()</signal>
    <receiver>networkDock</receiver>
-   <slot>setVisible(bool)</slot>
+   <slot>show()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
      <y>-1</y>
     </hint>
     <hint type="destinationlabel">
-     <x>135</x>
-     <y>211</y>
+     <x>440</x>
+     <y>367</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>lineEdit</sender>
-   <signal>returnPressed()</signal>
-   <receiver>pushButton</receiver>
-   <slot>click()</slot>
+   <sender>actionBefehle_zeigen</sender>
+   <signal>triggered()</signal>
+   <receiver>commandDock</receiver>
+   <slot>show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>301</x>
-     <y>384</y>
+     <x>-1</x>
+     <y>-1</y>
     </hint>
     <hint type="destinationlabel">
-     <x>358</x>
-     <y>386</y>
+     <x>167</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionNetzwerk_verbergen</sender>
+   <signal>triggered()</signal>
+   <receiver>networkDock</receiver>
+   <slot>hide()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>440</x>
+     <y>367</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionBefehle_verbergen</sender>
+   <signal>triggered()</signal>
+   <receiver>commandDock</receiver>
+   <slot>hide()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>167</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionStatus_Codes_verbergen</sender>
+   <signal>triggered()</signal>
+   <receiver>stateDock</receiver>
+   <slot>hide()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>149</x>
+     <y>367</y>
     </hint>
    </hints>
   </connection>
