--- a/Client/Desktop/EVSE/mainwindow.ui
+++ b/Client/Desktop/EVSE/mainwindow.ui
@@ -73,7 +73,7 @@
      <x>0</x>
      <y>0</y>
      <width>580</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
@@ -110,9 +110,17 @@
     <addaction name="actionNetzwerk_verbergen"/>
     <addaction name="actionBefehle_verbergen"/>
    </widget>
+   <widget class="QMenu" name="menuNetzwrk">
+    <property name="title">
+     <string>Netzwerk</string>
+    </property>
+    <addaction name="actionVerbindung_ffnen"/>
+    <addaction name="actionVerbindung_schlie_en"/>
+   </widget>
    <addaction name="menuDatei"/>
    <addaction name="menuFenster"/>
    <addaction name="menuAnsicht"/>
+   <addaction name="menuNetzwrk"/>
    <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -158,7 +166,7 @@
         <bool>false</bool>
        </property>
        <attribute name="horizontalHeaderVisible">
-        <bool>true</bool>
+        <bool>false</bool>
        </attribute>
        <attribute name="horizontalHeaderCascadingSectionResizes">
         <bool>false</bool>
@@ -585,6 +593,16 @@
   <action name="actionBefehle_verbergen">
    <property name="text">
     <string>Befehle verbergen</string>
+   </property>
+  </action>
+  <action name="actionVerbindung_ffnen">
+   <property name="text">
+    <string>Verbindung öffnen...</string>
+   </property>
+  </action>
+  <action name="actionVerbindung_schlie_en">
+   <property name="text">
+    <string>Verbindung schließen</string>
    </property>
   </action>
  </widget>
