--- a/Client/Desktop/EVSE/mainwindow.ui
+++ b/Client/Desktop/EVSE/mainwindow.ui
@@ -73,7 +73,7 @@
      <x>0</x>
      <y>0</y>
      <width>961</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
@@ -520,11 +520,17 @@
        </property>
        <layout class="QGridLayout" name="gridLayout_8">
         <item row="0" column="1">
-         <widget class="QSpinBox" name="digitalSpinBoxVal">
-          <property name="maximum">
-           <number>1</number>
+         <spacer name="horizontalSpacer_7">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
-         </widget>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
         <item row="0" column="0">
          <widget class="QSpinBox" name="digitalSpinBoxPin">
@@ -540,24 +546,30 @@
          </widget>
         </item>
         <item row="0" column="3">
-         <widget class="QPushButton" name="digitalButton">
+         <widget class="QPushButton" name="digitalButton1">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
-           <string>OK</string>
+           <string>1</string>
           </property>
          </widget>
         </item>
         <item row="0" column="2">
-         <spacer name="horizontalSpacer_7">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
+         <widget class="QPushButton" name="digitalButton0">
+          <property name="minimumSize">
            <size>
-            <width>40</width>
-            <height>20</height>
+            <width>100</width>
+            <height>0</height>
            </size>
           </property>
-         </spacer>
+          <property name="text">
+           <string>0</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -590,6 +602,12 @@
         </item>
         <item row="0" column="3">
          <widget class="QPushButton" name="pwmButton">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
            <string>OK</string>
           </property>
@@ -679,20 +697,32 @@
    <property name="text">
     <string>Befehle anzeigen</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+B</string>
+   </property>
   </action>
   <action name="actionStatus_Codes_verbergen">
    <property name="text">
     <string>Status-Codes verbergen</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
   <action name="actionNetzwerk_verbergen">
    <property name="text">
     <string>Netzwerk verbergen</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+N</string>
+   </property>
   </action>
   <action name="actionBefehle_verbergen">
    <property name="text">
     <string>Befehle verbergen</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+B</string>
    </property>
   </action>
   <action name="actionVerbindung_ffnen">
